fix: null guards in Command, player quit cleanup, bg slot, cached addon, loader resilience